--- a/index.html
+++ b/index.html
@@ -54,10 +54,12 @@
     <div class="sidebar" id="sidebar">
       <button class="close-btn" onclick="toggleMenu()">✖</button>
       <ul>
-        <li><a href="#">Features</a></li>
-        <li><a href="#">Pricing</a></li>
-        <li><a href="#">Docs</a></li>
-        <li><a href="#">Sign In</a></li>
+            <li><a href="#">Product</a></li>
+            <li><a href="#">Use cases</a></li>
+            <li><a href="#">Developers</a></li>
+            <li><a href="#">Resources</a></li>
+            <li><a href="#">Demo</a></li>
+            <li><a href="#">Pricing</a></li>
       </ul>
     </div>
 
